--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
        <div class="dice" >
          <p><h3>Player 1</h3></p>
-         <img class="img1" src="images/dice6.png" alt="dice-img">
+         <img class="img1" src="dice6.png" alt="dice-img">
        </div>
 
 
        <div class="dice">
          <p><h3>Player 2</h3></p>
-         <img class="img2" src="images/dice6.png" alt="dice-img">
+         <img class="img2" src="dice6.png" alt="dice-img">
        </div>
 
 
